Added NSFW ordinals table, review of NSFW things. Etc.
